# halFBXIO4B

./: .gitignore  COPYING  GPL-license.txt  LICENSE  README.md  __init__.py  auto_load.py  panel.py
blender_plugin/: COPYING  README.md  __init__.py  auto_load.py  panel.py
blender_plugin/fbx_exporter/: __init__.py  c_data_structure.py  construct_export_object.py  fbx_exporter.py  i18n.py
exporter/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.txt  LICENSE  README.md  variables.cmake.sample
exporter/cmake/: FindFbxsdk.cmake
exporter/include/: HalFbxExporter.h  io.h
exporter/src/: CDataStructure.h  HalFbxExporter.cxx  HalFbxExporter.h  binding.h  io.cpp  main.cxx
fbx_exporter/: __init__.py  fbx_exporter.py
scripts/: __init__.py  panel.py
scripts/fbx_exporter/: __init__.py  c_data_structure.py  clib.py  construct_export_object.py  export_service.py  expoter.py  i18n.py  importer_exporter.py  operator.py  panel.py
scripts/fbx_exporter/lib/: HalFbxExporter.cp310-win_amd64.pyd  HalFbxExporter.pyd
scripts/lib/: HalFbxExporter.lib
scripts/test/: export_prims.py  launch.py
